--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+#full-screen-btn {
+  color: rgb(0, 0, 0) !important;
+  font-weight: bold;
+  opacity: 0.75;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#full-screen-btn:hover {
+  color: rgb(0, 0, 0) !important;
+  font-weight: bold;
+  opacity: 1;
+  border-color: transparent !important;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#visualize-product-btn:hover {
+  color: rgb(22, 115, 255) !important;
+  background-color: var(--bs-btn-hover-bg);
+  border-color: rgb(22, 115, 255) !important;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button.btn-close {
+  margin: 0 !important;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active-users,
+.active-products {
+  color: rgb(22, 115, 255) !important;
 }
